# Dodaren

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Dodaren/: Animation.cpp  Animation.hpp  Level.hpp  ResourceHandler.hpp
Dodaren/Entities/: Entity.hpp  EntityManager.hpp  Player.cpp  Player.hpp
Dodaren/Resources/Maps/: Map1.tmx
src/: Animation.cpp  Animation.hpp  Game.cpp  Game.hpp  ResourceHandler.hpp
src/Entities/: Entity.hpp  EntityManager.cpp  EntityManager.hpp  Player.cpp  Player.hpp
src/States/: GameState.cpp  GameState.hpp  MenuState.cpp  MenuState.hpp  State.hpp  StateManager.cpp
